--- a/index.html
+++ b/index.html
@@ -84,7 +84,12 @@
     </div>
 
     <script src="fpsmeter.min.js"></script>
+    <script src="js/variables.js"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/render.js"></script>
+    <script src="js/update.js"></script>
+    <script src="js/loadMap.js"></script>
     <script src="level.js"></script>
-    <script src="platformer.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
