--- a/index.html
+++ b/index.html
@@ -20,6 +20,27 @@
         <b>LEFT/RIGHT</b> to move, <b>SPACE</b> to jump, collect gold and jump
         on monsters.
       </div>
+
+      <div class="dpad-wrapper">
+        <div class="dpad-top-bottom">
+        <button class="dpad-button up"></button>
+        </div>
+        <div class="dpad-middle">
+        <button class="dpad-button left"></button>
+        <button class="dpad-button right"></button>  
+        </div>
+        <div class="dpad-top-bottom">
+        <button class="dpad-button down"></button>  
+        </div>
+      </div
+      
+      
+      <div id="buttons">
+        <div class="buttons-wrapper">
+          <button class="button">A</button>
+          <button class="button">B</button>
+        </div>
+      </div>
     </div>
 
     <script src="fpsmeter.min.js"></script>
