update sprite animation and sprites

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   
     <script src="js/utils.js"></script>
     <script src="js/variables.js"></script>
-
+    <script src="js/input.js"></script>
  
     <script src="js/render.js"></script>
     <script src="js/update.js"></script>
