add currentLevel variable

--- a/index.html
+++ b/index.html
@@ -49,16 +49,15 @@
 
     <script src="fpsmeter.min.js"></script>
   
-    <script src="js/utils.js"></script>
-    <script src="js/variables.js"></script>
+    <script src="js/utils.js"></script> 
     <script src="level.js"></script>
+    <script src="js/variables.js"></script>
+   
     <script src="js/input.js"></script>
-  
     <script src="js/render.js"></script>
     <script src="js/update.js"></script>
     <script src="js/camera.js"></script>
-    <script src="js/loadMap.js"></script>
-    
-    <script src="index.js"></script>
+    <script src="js/setup.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
