--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
     <script src="fpsmeter.min.js"></script>
   
     <script src="js/utils.js"></script> 
-    <script src="level.js"></script>
+    <script src="levels/levelObjects.js"></script>
+    <script src="levels/level1.js"></script>
+    <script src="levels/level2.js"></script>
     <script src="js/variables.js"></script>
    
     <script src="js/input.js"></script>
