--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <script src="levels/levelObjects.js"></script>
     <script src="levels/level1.js"></script>
     <script src="levels/level2.js"></script>
+    <script src="levels/level3.js"></script>
     <script src="js/variables.js"></script>
    
     <script src="js/input.js"></script>
